--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -10,6 +10,9 @@
             <setting name="Reorganizing_RunAtStartOfCleanup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
