--- a/.editorconfig
+++ b/.editorconfig
@@ -66,6 +66,7 @@ csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_expression_bodied_local_functions = false:silent
 csharp_indent_labels = one_less_than_current
 csharp_space_around_binary_operators = before_and_after
+csharp_style_prefer_method_group_conversion = true:silent
 
 
 
@@ -123,3 +124,8 @@ indent_size = 4
 end_of_line = crlf
 dotnet_style_null_propagation = true:suggestion
 indent_style=tab
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
+dotnet_style_prefer_auto_properties = true:silent
+dotnet_style_object_initializer = true:suggestion
+dotnet_style_collection_initializer = true:suggestion
+dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
