--- a/Snowflake.Data/Tortuga.Data.Snowflake.csproj
+++ b/Snowflake.Data/Tortuga.Data.Snowflake.csproj
@@ -24,6 +24,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Core\FileTransfer\StorageClient\ISFLocalStorage.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="AWSSDK.S3" Version="3.7.0.4" />
 		<PackageReference Include="Google.Cloud.Storage.V1" Version="2.5.0" />
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
