Round 41 - Wave 5 Compiler Warnings

--- a/.editorconfig
+++ b/.editorconfig
@@ -129,3 +129,4 @@ dotnet_style_prefer_auto_properties = true:silent
 dotnet_style_object_initializer = true:suggestion
 dotnet_style_collection_initializer = true:suggestion
 dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
+dotnet_diagnostic.CA1031.severity = silent
